--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   </div>
   <div class="body">
     <div class="container">
+      <img src="./src/images/london-property.jpg">
       <h5 id="reviews"></h5>
       <ul id="revealed-reviews" class="revealed-properties"></ul>
       <button class="show-properties">BEST REVIEWS</button>
